SigmaCodebackup3rdSep/objects/Auto_Allocations_For_Manufaturing_Run__c.object
<CustomObject>
    <fields>
        <fullName>Manufacturing_Run__c</fullName>
        <label>Manufacturing Run</label>
        <referenceTo>Manufacturing_Run__c</referenceTo>
        <relationshipLabel>Auto Allocations For Manufaturing Run</relationshipLabel>
        <relationshipName>Auto_Allocations_For_Manufaturing_Run</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recipe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe</label>
        <referenceTo>Recipe__c</referenceTo>
        <relationshipLabel>Auto Allocations For Manufaturing Run</relationshipLabel>
        <relationshipName>Auto_Allocations_For_Manufaturing_Run</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Auto Allocation For Manufaturing Run</label>
    <nameField>
        <displayFormat>AMR-{00000}</displayFormat>
        <label>Auto Allocations For Manufaturing Run Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auto Allocations For Manufaturing Run</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>